32-bit build failures after JDK-8212657 (Promptly Return Unused Committed Memory from G1)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 12
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • gc
    • b24

      x86_32, arm32

      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-server_libjvm_objs_jvmFlagRangeList.o:
      In file included from /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/gc/shared/gc_globals.hpp:28:0,
                       from /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/runtime/globals.hpp:28,
                       from /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/memory/allocation.hpp:28,
                       from /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/gc/shared/oopStorage.hpp:28,
                       from /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/classfile/stringTable.hpp:28,
                       from /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/runtime/flags/jvmFlagRangeList.cpp:27:
      /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/runtime/flags/jvmFlagRangeList.cpp: In static member function 'static void JVMFlagRangeList::init()':
      /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/runtime/flags/jvmFlagRangeList.cpp:295:62: error: large integer implicitly truncated to unsigned type [-Werror=overflow]
       #define EMIT_RANGE_PRODUCT_FLAG(type, name, value, doc) ); emit_range_##type(#name,&name
                                                                    ^

      arm32:

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: