8215120: 32-bit build failures after JDK-8212657 (Promptly Return Unused Committed Memory from G1)

Reviewed-by: tschatzl, rkennke